Fix ExpandCollapse stories (remove template cause it wasn't displaying correctly), add controlled open state story

--- a/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.scss
+++ b/src/components/ExpandCollapse/__stories__/ExpandCollapse.stories.scss
@@ -1,3 +1,3 @@
-.expandCollapse {
+.monday-storybook-expand-collapse {
   width: 300px;
 }
